--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
                     <i class="fas fa-envelope-open-text"></i>
                 </div>
                 <div class="file-details">
-                    <div class="file-name">Vatausha_Howard_Invitation.pdf</div>
+                    <div class="file-name">Daniel_Erwin_Invitation.pdf</div>
                     <div class="file-meta">
                         <div class="file-meta-item">
                             <i class="fas fa-lock"></i>
@@ -1351,4 +1351,5 @@
         });
     </script>
 </body>
+
 </html>
